--- a/jokes.html
+++ b/jokes.html
@@ -40,10 +40,12 @@
         .dark-bg-active {
             background-color: #333;
         }
-         ul li {
+         ol li {
              margin-bottom: 10px; /* Añade espacio entre los elementos */
              font-size: 18px; /* Aumenta el tamaño de la letra */
-             line-height: 1.5; /* Mejora la legibilidad */
+             line-height: 1.5;
+             font-family: arial;
+      
         }
   </style>
   <link rel="stylesheet" href="styles.css">
