--- a/index.html
+++ b/index.html
@@ -86,8 +86,17 @@
   <ul>
     <li>
       <a href="https://xaaaviferrer.github.io/code-runner/" target="_blank" id="code-runner-button" class="custom-button">
-        Code Runner
-      </a>
+        Code Runner   
+        </a>
+        <p>Este es un Ejecutador de Html, Css i Javasript, no funciona bien del todo pero bueno algo es algo</p>
+        <p>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+        
+    </li>
+     <li>
+        <a href="https://github.com/xaaaviferrer/Ferrer-Os" target="_blank" class="custom-button" > Ferrer Os
+        </a>
+        <p> Este es un sistema operativo simple construido en C. Actualmente el enlace es del codigo fuente del Ferrer Os</p>
+        <p>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
     </li>
   </ul>
 </section>
