SI el cambio es una letra vale

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <a href="https://xaaaviferrer.github.io/code-runner/" target="_blank" id="code-runner-button" class="custom-button">
         Code Runner   
         </a>
-        <p>Este es un Ejecutador de Html, Css i Javasript, no funciona bien del todo pero bueno algo es algo</p>
+        <p>Este es un ejecutador de Html, Css i Javasript, no funciona bien del todo pero bueno algo es algo</p>
         <p>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
         
     </li>
